# src/controllers/users/index.ts
@@ -5,6 +5,7 @@ import updateUser from './updateUser';
 import getUser from './getUser';
 import { become, leave } from './spectate';
 import { fetchRemoteTicket } from './getRemoteTicket';
+import fetchOrgas from './fetchOrgas';
 
 const router = Router();
 
@@ -18,5 +19,7 @@ router.post('/current/spectate', become);
 router.delete('/current/spectate', leave);
 
 router.get('/:userId/ticket', fetchRemoteTicket);
+
+router.get('/orgas', fetchOrgas);
 
 export default router;
