# src/controllers/users/openapi.yml
@@ -244,3 +244,34 @@
         $ref: '#/components/responses/403Unauthorized'
       404:
         $ref: '#/components/responses/404UserNotFound'
+
+/users/orgas:
+  get:
+    summary: Retourne la liste des organisateurs, avec leurs commissions et rôle dans chaque commission
+    tags:
+      - Users
+    responses:
+      200:
+        description: La liste des organisateurs
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  firstname:
+                    type: string
+                  lastname:
+                    type: string
+                  commissions:
+                    type: object
+                    properties:
+                      dev:
+                        type: string
+                        example: respo
+                      anim:
+                        type: string
+                        example: member
